--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
 
+    //ViewBindingPropertyDelegate
+    implementation "com.github.kirich1409:viewbindingpropertydelegate:1.5.0-beta01"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.0-beta01"
+
+    implementation 'androidx.activity:activity-ktx:1.6.0-alpha01'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
